--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,6 @@
 <p>This is the partial for view 1.</p>
+
+<div ng-controller="View1Ctrl as list">
+  <h1>TESTING</h1>
+  <h1>{{list.questions.name}}</h1>
+</div>
