--- a/app/index.html
+++ b/app/index.html
@@ -6,18 +6,24 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Bliss Recruitment App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald" rel="stylesheet">
   <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="view1/view1.css">
+  <link rel="stylesheet" href="ListScreen/ListScreen.css">
+  <link rel="stylesheet" href="DetailScreen/DetailScreen.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
   <ul class="menu">
     <li><a href="#!/view1">view1</a></li>
     <li><a href="#!/view2">view2</a></li>
+    <li><a href="#!/ListScreen">List</a></li>
+    <li><a href="#!/DetailScreen">Details</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -26,7 +32,6 @@
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -37,6 +42,7 @@
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="ListScreen/ListScreen.js"></script>
+  <script src="DetailScreen/DetailScreen.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
