--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -3,3 +3,6 @@
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
 </p>
+<div ng-controller="View2Ctrl">
+  {{name}}
+</div>
