--- a/app/DetailScreen/DetailScreen.html
+++ b/app/DetailScreen/DetailScreen.html
@@ -12,8 +12,13 @@
     <li ng-repeat="choice in detail.question.choices"> {{choice.choice}} Votes: {{choice.votes}}
       <button type="button" class="voteButton" ng-click="voteChoice()">Vote</button>
     </li>
-  </ol>
-  <button type="button" class="shareButton" ng-click="shareQuestion()">Share</button>
-  <input type="text" ng-model="emailInput" ng-show="shareQuestionFlag" placeholder="Email of your friend :)" ng-keyup="$event.keyCode == 13 ? sendEmail() : null">
+  </ol
+  <form ng-submit="sendEmail()" name="form">
+    <input type="submit" value="Share" class="shareButton" ng-mouseover="shareQuestionFlag = true"/>
+    <input type="email" required name="email" ng-model="emailInput" ng-show="shareQuestionFlag" placeholder="Email of your friend :)"/>
+    <span ng-show="form.email.$dirty">
+      Email is required
+    </span>
+  </form>
   <h5>{{message}}</h5>
 </div>
