Loading screen; css refactor in list screen

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="view1/view1.css">
   <link rel="stylesheet" href="ListScreen/ListScreen.css">
   <link rel="stylesheet" href="DetailScreen/DetailScreen.css">
+  <link rel="stylesheet" href="LoadingScreen/LoadingScreen.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 
   <!-- Latest compiled and minified CSS -->
@@ -33,6 +34,7 @@
     <li><a href="#!/view2">view2</a></li>
     <li><a href="#!/ListScreen">List</a></li>
     <li><a href="#!/DetailScreen">Details</a></li>
+    <li><a href="#!/LoadingScreen">Loading</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -52,6 +54,7 @@
   <script src="view2/view2.js"></script>
   <script src="ListScreen/ListScreen.js"></script>
   <script src="DetailScreen/DetailScreen.js"></script>
+  <script src="LoadingScreen/LoadingScreen.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
