--- a/app/ListScreen/ListScreen.html
+++ b/app/ListScreen/ListScreen.html
@@ -1,23 +1,31 @@
 
 
-<header>List Questions</header>
 
-<div ng-controller="ListScreenCtrl as list" class="questionList" ng-init="getApiQuestions()">
-  <div ng-show="loading"><h1>LOADING...</h1></div>
 
-  <input ng-show="!loading" type="text" class="searchBox" placeholder="Search...">
-  <ol ng-show="!loading">
-    <li class="question" ng-repeat="question in questions">
-      <a ng-href="/#!/DetailScreen/{{question.id}}">
-        <figure>
-          <img src={{question.thumb_url}}>
-        </figure>
-        <h3>{{question.question}}</h3>
-        <time>{{question.published_at}}</time>
-        <ol>
-          <li ng-repeat="choice in question.choices">{{choice.choice}} Votes: {{choice.votes}}</li>
-        </ol>
-      </a>
-    </li>
-  </ol>
+<div class="container-fluid" ng-controller="ListScreenCtrl as list" ng-init="getApiQuestions()">
+  <div class="row-fluid">
+    <div class="col-md-12">
+      <header>List Questions</header>
+      <div ng-show="loading"><h1>LOADING...</h1></div>
+      <input ng-show="!loading" type="text" class="searchBox" placeholder="Search..." ng-model="searchBox">
+    </div>
+    <div class="col-md-12">
+      <ol ng-show="!loading">
+        <div class="col-md-12">
+          <li class="question" ng-repeat="question in questions | filter:searchBox">
+            <a class="questionLinks" ng-href="/#!/DetailScreen/{{question.id}}">
+              <figure>
+                <img src={{question.thumb_url}}>
+              </figure>
+              <h2>{{question.question}}</h2>
+              <time>{{question.published_at}}</time>
+              <ol class="choices">
+                <li ng-repeat="choice in question.choices">{{choice.choice}} Votes: {{choice.votes}}</li>
+              </ol>
+            </a>
+          </li>
+        </div>
+      </ol>
+    </div>
+  </div>
 </div>
