--- a/app/LoadingScreen/loadingScreen.html
+++ b/app/LoadingScreen/loadingScreen.html
@@ -3,7 +3,7 @@
 <div class="container-fluid" ng-controller="LoadingScreenCtrl" ng-init="getApiHealth()">
   <div class="row-fluid">
     <div class="col-md-12 wrapper" ng-show="retryAction">
-      <button class="btn btn-info" ng-click="refreshPage()">Retry</button>
+      <button class="btn btn-info retryButton" ng-click="refreshPage()">Retry</button>
     </div>
   </div>
 </div>
